--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -10,6 +10,100 @@ body {
     font: 'Gotham Pro';
 }
 
+/* Делаем затемнение заднего плана */
+.back-dialog{
+    width:100%;
+    min-height:100%;
+    background-color: rgba(0,0,0,0.5);
+    overflow:hidden;
+    position:fixed;
+    top:0px;
+}
+/* Позиционируем блок с контентом */
+.dialog-content{
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 0 10 0 10;
+    margin:40px auto 0px auto;
+    min-width:150px;
+    max-width:600px;
+    min-height: 150px;
+    max-height: 600px;
+    padding-bottom: 10px;
+    background-color: #8C9C76;
+    border-radius: 10px;
+}
+/* Позиционируем верхний бар */
+.dialog-title{
+    margin: 0 -10 0 -10;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    vertical-align: middle;
+    height: 30px;
+    background-color: #3498DB;
+    color: #fff;
+}
+
+.dialog-title span{
+    font-size: 25px;
+    padding-left: 10px;
+}
+/* Делаем кнопку закрытия окна */
+.close-dialog{
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-align: center;
+    color: #fff;
+    background-color: #2574A9;
+    height: 30px;
+    width: 30px;
+    border:0;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+.close-dialog:before{
+    font-family: Arial;
+    color: rgba(255, 255, 255, 0.9);
+    content: "x";
+    font-size: 20px;
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
+outline: none;
+}
+/* Кнопка открытия окна */
+.button {
+  position: relative;
+  vertical-align: middle;
+  width: 98%;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #3498db;
+  border: 0;
+  border-radius: 10px;
+  border-bottom: 2px solid #2a8bcc;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -3px #2a8bcc;
+  box-shadow: inset 0 -3px #2a8bcc;
+    outline: none;
+}
+.button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
 .typed {
     color: var(--text-color);
     opacity: 0.8;
